Fixing styles in dark mode

--- a/client/src/styles/KanbanBoardStyles.css
+++ b/client/src/styles/KanbanBoardStyles.css
@@ -111,6 +111,8 @@ h2 {
   border-radius: 5px;
   margin-bottom: 10px;
   font-size: 14px;
+  color: #000000;
+  outline: none;
 }
 
 .add-column button {
@@ -174,6 +176,7 @@ h2 {
   font-size: 14px;
   outline: none;
   background-color: white;
+  color: #000000;
 }
 
 .add-task button {
